--- a/GrapheneTrace.Client/GrapheneTrace.Client.csproj
+++ b/GrapheneTrace.Client/GrapheneTrace.Client.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Blazor.Bootstrap" Version="3.4.0" />
     <PackageReference Include="Blazored.Toast" Version="4.2.1" />
+    <PackageReference Include="MudBlazor" Version="7.8.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.21" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.21" PrivateAssets="all" />
   </ItemGroup>
