jwt connection successfully

--- a/GrapheneTrace.Api/appsettings.json
+++ b/GrapheneTrace.Api/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": ""
+  },
+  "Jwt": {
+    "Secret": "",
+    "ExpiryDays": 7
+  },
   "AllowedHosts": "*"
 }
